--- a/prueba.html
+++ b/prueba.html
@@ -168,6 +168,9 @@
           </div>
         </div>
       </section>
+
+
+      ------------------------------------------------
       <section id="portfolio">
         <div class="container">
           <h2 class="section__title" data-sr-id="8" style="visibility: visible; opacity: 1; transition: opacity 0.6s cubic-bezier(0.5, 0, 0, 1) 0.25s;">Portfolio</h2>
@@ -175,8 +178,8 @@
           <div class="portfolio__grid">
             <div class="portfolio__item" data-sr-id="31" style="visibility: visible; opacity: 1; transition: opacity 0.6s cubic-bezier(0.5, 0, 0, 1) 0.45s;">
               <picture>
-                <source type="image/jpeg" srcset="./projects/Avo-store.jfif">
-                <img class="portfolio__img" alt="portfolio item">
+                
+                <img class="portfolio__img" src="./poke1.png" alt="portfolio item">
               </picture>
               <div class="portfolio__description">
                 <h3 class="portfolio__description--title">Avo-Store</h3>
@@ -235,8 +238,8 @@
             </div>
             <div class="portfolio__item" data-sr-id="34" style="visibility: visible; opacity: 1; transition: opacity 0.6s cubic-bezier(0.5, 0, 0, 1) 0.45s;">
               <picture>
-                <source type="image/jpeg" srcset="./projects/RickandMorty.jfif">
-                <img class="portfolio__img" alt="portfolio item">
+                
+                <img class="portfolio__img" src="./rick.jpg" alt="portfolio item">
               </picture>
               <div class="portfolio__description">
                 <h3 class="portfolio__description--title">Rick and Morty API</h3>
