se agrega angular

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <li>JavaScript, Git, Github, GraphQl, Render, express, Sequelize,
           Redux, Bcrypt, netlify, Java, Python, react con vite, Node.js
           CSS, HTML 5, dBeaver, Postman, postgresSQL, SQL, JWT, morgan, Muleter,
-        Corse.  </li>
+        Corse, Angular.  </li>
        
         <li>Comming soon more....</li>
         
